2009-12-03  Jonathan Pryor <jpryor@novell.com>

	* Resources/stylesheet.xsl: Add support for generating namespace links
	  for <see cref="N:..." />.
	* Test/DocTest-v1.cs: Add namespace links for testing.
	* Test/en.expected.importslashdoc/Mono.DocTest/Color.xml,
	  Test/en.expected.importslashdoc/NoNamespace.xml,
	  Test/html.expected/index.html,
	  Test/html.expected/Mono.DocTest/Color.html,
	  Test/html.expected/NoNamespace.html,
	  Test/msxdoc-expected.importslashdoc.xml: Flush.

2009-12-03  Jonathan Pryor <jpryor@novell.com>

	* Test/html.expected/Mono.DocTest.Generic/MyList`1.html,
	  Test/html.expected/Mono.DocTest.Generic/MyList`2.html: Flush to sync
	  with updated mdoc.  Inherited members are now shown (as they were
	  supposed to be, but a bug had prevented from being found).

2009-12-02  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Enable debug output in
	  XslCompiledTransform when --debug is specified.
	* Resources/overview.xsl: Add xmlns, exclude-result-prefixes so that
	  .NET won't complain about the stylesheet.  (Why's it complain?)
	* Resources/stylesheet.xsl: .NET compatibility fixes:
	  - Use msxsl:node-set() when necessary.
	  - Change XPath expressions so that they work properly everywhere.
	* Makefile: Don't build an 'mdoc-net.exe' anymore, as the normal
	  mdoc.exe can now run normally under .NET.

2009-11-25  Jonathan Pryor <jpryor@novell.com>

	* Makefile: When copying mdoc-net.exe into ./mdoc-net, rename it to
	  mdoc.exe so that .NET users continue to use the name 'mdoc'.  This
	  will make documentation easier, etc.

2009-11-25  Jonathan Pryor <jpryor@novell.com>

	+ Giving up on getting mdoc to fully work under .NET; specifically,
	  mdoc-export-html makes use of many Mono XSLT "extensions" (part of
	  XSLT 2.0, apparently) which .NET doesn't support.  To run mdoc under
	  .NET, use mdoc-net.exe, which is a "static" mdoc.exe, including the 