@@ -1,3 +1,9 @@
+2010-01-11  Jonathan Pryor <jpryor@novell.com>
+
+	* Mono.Documentation/monodocs2slashdoc.cs: Fix NamespaceSummaries.xml
+	  generation to look at the ns-NAMESPACE.xml files, not just
+	  NAMESPACE.xml files.
+
 2009-12-03  Jonathan Pryor <jpryor@novell.com>
 
 	* Resources/stylesheet.xsl: Add support for generating namespace links
